Add hover to silver and bronze medals.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
           <th>COUNTRY</th>
           <th>
             <div id="gold">
-              <span class="medal">G</span>
+              <span class="medal medal-gold">G</span>
             </div>
           </th>
           <th>
             <div id="silver">
-              <span class="medal">S</span>
+              <span class="medal medal-silver">S</span>
             </div>
           </th>
           <th>
             <div id="bronze">
-              <span class="medal">B</span>
+              <span class="medal medal-bronze">B</span>
             </div>
           </th>
           <th>TOTAL</th>
